[PRM-1290] - Revised page heading structure

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,7 @@ $hmrc-assets-path: "/penalties-appeals/assets/lib/hmrc-frontend/hmrc/";
   color: #1d70b8;
   border: none;
 }
+
+.penalty-information-caption {
+  display: table-header-group;
+}
