--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -20,10 +20,9 @@
 
 @layout(
     pageTitle = messages("serviceUnavailable.headingAndTitle"),
-    showPenaltyInformation = false,
     backLinkEnabled = false
 ) {
-    <h1 class="govuk-heading-l">@messages("serviceUnavailable.headingAndTitle")</h1>
+    <h1 class="govuk-heading-xl" id="page-heading">@messages("serviceUnavailable.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("serviceUnavailable.p1")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p2")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p3")</p>
