--- a/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
@@ -31,9 +31,8 @@
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legend = messages("healthReason.wasHospitalStayRequired.headingAndTitle"),
-            items = radioOptions,
-            legendAsHeading = true
+            legendContent = messages("healthReason.wasHospitalStayRequired.headingAndTitle"),
+            items = radioOptions
         )
 
         @govukButton(Button(content = Text(messages("common.continue"))))
