--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -34,8 +34,8 @@
 
         @dateInput(
             form = form,
-            legendContent = getMessageKeyForPage("health.whenHealthIssueHappened.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
+            legendContent = messages(getMessageKeyForPage("health.whenHealthIssueHappened.headingAndTitle")),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
