--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -33,8 +33,8 @@
 
         @dateInput(
             form = form,
-            legendContent = getMessageKeyForPage("whenDidBecomeUnable.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
+            legendContent = messages(getMessageKeyForPage("whenDidBecomeUnable.headingAndTitle")),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
