--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -28,11 +28,10 @@
 
 @layout(pageTitle = messages("appealConfirmation.headingAndTitle"),
     isPageFullWidth = false,
-    showPenaltyInformation = false,
     backLinkEnabled = false) {
 
     <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">@messages("appealConfirmation.headingAndTitle")</h1>
+        <h1 class="govuk-panel__title" id="page-heading">@messages("appealConfirmation.headingAndTitle")</h1>
         <div class="govuk-panel__body">
             @messages("appealConfirmation.typeAndPeriod", penaltyType, periodStart, periodEnd)
         </div>
