--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -20,14 +20,16 @@
         bullets: components.bullets,
         link: components.link,
         govukButton: GovukButton,
-        formHelper: FormWithCSRF)
+        formHelper: FormWithCSRF,
+        pageHeader: components.pageHeader)
 
 @(contentToDisplayInSummaryList: Seq[(String, String, String)], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false,
     optPageMode = Some(pageMode)) {
-    <h1 class="govuk-heading-l">@messages("checkYourAnswers.headingAndTitle")</h1>
+
+    @pageHeader(messages("checkYourAnswers.headingAndTitle"))
     <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
     <dl class="govuk-summary-list">
