--- a/app/views/components/characterCount.scala.html
+++ b/app/views/components/characterCount.scala.html
@@ -18,6 +18,8 @@
 @import uk.gov.hmrc.hmrcfrontend.views.viewmodels.charactercount.CharacterCount
 @import uk.gov.hmrc.hmrcfrontend.views.html.components.HmrcCharacterCount
 @import uk.gov.hmrc.govukfrontend.views.viewmodels.content.Content
+@import viewtils.PenaltyTypeHelper
+
 @this(hmrcCharacterCount: HmrcCharacterCount)
 
 @(
@@ -27,11 +29,25 @@
         maxLength: Option[Int] = None,
         hint: Option[Content] = None,
         classes: String = ""
-)(implicit messages: Messages)
+)(implicit messages: Messages, request: Request[_])
+
+@labelContent = {
+  <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
+  @{
+    messages("penaltyInformation.headerText",
+      PenaltyTypeHelper.getKeysFromSession().get.head,
+      PenaltyTypeHelper.getKeysFromSession().get(1),
+      PenaltyTypeHelper.getKeysFromSession().get.last
+    )
+  }
+  </span>
+  <span id="page-heading">@label</span>
+}
 @hmrcCharacterCount(CharacterCount(
-    label = Label(classes = "govuk-label--l",
+    label = Label(
+        classes = "govuk-label--xl",
         isPageHeading = true,
-        content = Text(label)),
+        content = HtmlContent(labelContent)),
     hint =  hint.map(h => Hint(content = h)),
     maxLength = maxLength,
     classes = classes).withFormField(field)
