--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -14,57 +14,75 @@
  * limitations under the License.
  *@
 
+@import viewtils.PenaltyTypeHelper
+
 @this(govukDateInput: GovukDateInput)
 
 @(
         form: Form[_],
         legendContent: String,
-        legendClasses: Option[String] = Some("govuk-visually-hidden"),
+        legendClasses: Option[String] = None,
         id: String = "date",
         hintText: Option[String] = None,
-        legendAsPageHeading: Boolean = false)(implicit messages: Messages)
+        showPenaltyInformation: Boolean = true,
+        legendAsPageHeading: Boolean = false)(implicit messages: Messages, request: Request[_])
+
+@legend = {
+  <h1 class="govuk-fieldset__heading">
+    <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
+      @{
+        messages("penaltyInformation.headerText",
+          PenaltyTypeHelper.getKeysFromSession().get.head,
+          PenaltyTypeHelper.getKeysFromSession().get(1),
+          PenaltyTypeHelper.getKeysFromSession().get.last
+        )
+      }
+    </span>
+    <span id="page-heading">@legendContent</span>
+  </h1>
+}
 
 @govukDateInput(DateInput(
-    fieldset = Some(Fieldset(
-        legend = Some(
-            Legend(
-                content = Text(messages(legendContent)),
-                isPageHeading = legendAsPageHeading,
-                classes = legendClasses.getOrElse("")
-            )
-        )
-    )),
-    id = id,
-    items = Seq(
-        InputItem(
-            id = s"$id.day",
-            classes = s"govuk-input--width-2${if(form(s"$id.day").hasErrors || form.errors.exists(_.args.contains("day")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
-            name =  s"$id.day",
-            label = Some(messages("date.day")),
-            value = form(s"$id.day").value
-        ),
-        InputItem(
-            id = s"$id.month",
-            classes = s"govuk-input--width-2${if(form(s"$id.month").hasErrors || form.errors.exists(_.args.contains("month")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
-            name = s"$id.month",
-            label = Some(messages("date.month")),
-            value = form(s"$id.month").value
-        ),
-        InputItem(
-            id = s"$id.year",
-            classes = s"govuk-input--width-4${if(form(s"$id.year").hasErrors || form.errors.exists(_.args.contains("year")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
-            name = s"$id.year",
-            label = Some(messages("date.year")),
-            value = form(s"$id.year").value
-        )
+  fieldset = Some(Fieldset(
+    legend = Some(
+      Legend(
+        content = if(showPenaltyInformation) HtmlContent(legend) else Text(legendContent),
+        isPageHeading = false,
+        classes = legendClasses.getOrElse("")
+      )
+    )
+  )),
+  id = id,
+  items = Seq(
+    InputItem(
+      id = s"$id.day",
+      classes = s"govuk-input--width-2${if(form(s"$id.day").hasErrors || form.errors.exists(_.args.contains("day")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
+      name = s"$id.day",
+      label = Some(messages("date.day")),
+      value = form(s"$id.day").value
     ),
-    hint = hintText.map(hint => Hint(content = HtmlContent(messages(hint)))),
-    errorMessage = {
-        form(id).error
-                .orElse(form(s"$id.day").error)
-                .orElse(form(s"$id.month").error)
-                .orElse(form(s"$id.year").error)
-                .map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
-    }
+    InputItem(
+      id = s"$id.month",
+      classes = s"govuk-input--width-2${if(form(s"$id.month").hasErrors || form.errors.exists(_.args.contains("month")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
+      name = s"$id.month",
+      label = Some(messages("date.month")),
+      value = form(s"$id.month").value
+    ),
+    InputItem(
+      id = s"$id.year",
+      classes = s"govuk-input--width-4${if(form(s"$id.year").hasErrors || form.errors.exists(_.args.contains("year")) || form.errors.exists(_.args.size > 1)) " govuk-input--error" else ""}",
+      name = s"$id.year",
+      label = Some(messages("date.year")),
+      value = form(s"$id.year").value
+    )
+  ),
+  hint = hintText.map(hint => Hint(content = HtmlContent(messages(hint)))),
+  errorMessage = {
+    form(id).error
+            .orElse(form(s"$id.day").error)
+            .orElse(form(s"$id.month").error)
+            .orElse(form(s"$id.year").error)
+            .map(err => ErrorMessage(content = Text(messages(err.message, err.args: _*))))
+  }
 
 ))
