--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -14,32 +14,56 @@
  * limitations under the License.
  *@
 
+@import viewtils.PenaltyTypeHelper
+
 @this(govukRadios: GovukRadios)
 
-@(      form: Form[_],
-        legend: String,
+@(
+        form: Form[_],
+        legendContent: String,
         items: Seq[RadioItem],
-        legendAsHeading: Boolean = true,
         hint: Option[Html] = None,
         classes: String = "govuk-fieldset__legend--xl",
         legendClasses: String = "",
         inline: Boolean = false,
-        formFieldId: String = "value"
-)(implicit messages: Messages)
+        formFieldId: String = "value",
+        showPenaltyInformation: Boolean = true
+)(implicit messages: Messages, request: Request[_])
+
+@legend = {
+  <h1 class="govuk-fieldset__heading">
+    <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
+      @{
+        messages("penaltyInformation.headerText",
+          PenaltyTypeHelper.getKeysFromSession().get.head,
+          PenaltyTypeHelper.getKeysFromSession().get(1),
+          PenaltyTypeHelper.getKeysFromSession().get.last
+        )
+      }
+    </span>
+    <span id="page-heading">@legendContent</span>
+  </h1>
+}
 
 @govukRadios(Radios(
-    classes = s"${if(inline){"govuk-radios--inline"} else ""}",
-    name = formFieldId,
-    fieldset = Some(Fieldset(
-        legend = Some(Legend(
-            content = Text(messages(legend)),
-            isPageHeading = legendAsHeading,
-            classes = if(legendClasses.nonEmpty) legendClasses else if(legendAsHeading) s"govuk-label--l" else "govuk-visually-hidden"
-        ))
-    )),
-    hint = hint.map { hint => Hint(
-        content = HtmlContent(hint)
-    )},
-    items = items,
-    errorMessage = form(formFieldId).error.map(err => ErrorMessage(content = Text(messages(err.message, err.args:_*))))
+  classes = s"${
+    if(inline) {
+      "govuk-radios--inline"
+    } else ""
+  }",
+  name = formFieldId,
+  fieldset = Some(Fieldset(
+    legend = Some(Legend(
+      content = if(showPenaltyInformation) HtmlContent(legend) else Text(legendContent),
+      isPageHeading = false,
+      classes = if(legendClasses.nonEmpty) legendClasses else "govuk-fieldset__legend--xl"
+    ))
+  )),
+  hint = hint.map { hint =>
+    Hint(
+      content = HtmlContent(hint)
+    )
+  },
+  items = items,
+  errorMessage = form(formFieldId).error.map(err => ErrorMessage(content = Text(messages(err.message, err.args: _*))))
 ))
