--- a/app/views/obligation/OtherRelevantInformationPage.scala.html
+++ b/app/views/obligation/OtherRelevantInformationPage.scala.html
@@ -16,6 +16,7 @@
 
 @import config.AppConfig
 @import utils.SessionKeys
+@import viewtils.PenaltyTypeHelper
 
 
 @this(layout: Layout,
@@ -26,14 +27,13 @@
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-
 @layout(pageTitle = messages("otherRelevantInformation.headingAndTitle"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-    @formHelper(action = postAction) {
 
+    @formHelper(action = postAction) {
         @characterCount(
             form("other-relevant-information-text"),
             label = messages("otherRelevantInformation.headingAndTitle"),
