--- a/app/views/obligation/YouCannotAppealPage.scala.html
+++ b/app/views/obligation/YouCannotAppealPage.scala.html
@@ -16,9 +16,12 @@
 
 @import utils.SessionKeys
 
-@this(layout: Layout,
-link: components.link,
-formHelper: FormWithCSRF)
+@this(
+        layout: Layout,
+        link: components.link,
+        formHelper: FormWithCSRF,
+        pageHeader: components.pageHeader
+)
 
 @(pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 @appealType = @{userRequest.session.get(SessionKeys.appealType)}
@@ -26,7 +29,7 @@ formHelper: FormWithCSRF)
 @layout(pageTitle = messages("youCannotAppeal.headingAndTitle"),
     isPageFullWidth = false,
     optPageMode = Some(pageMode)) {
-    <h1 class="govuk-heading-l">@messages("youCannotAppeal.headingAndTitle")</h1>
+    @pageHeader(messages("youCannotAppeal.headingAndTitle"))
     @if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString)
                 || appealType.contains(PenaltyTypeEnum.Additional.toString)){
         <p class="govuk-body">@getMessage("youCannotAppeal.lpp.p1")</p>
