--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -27,16 +27,15 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-        @formHelper(action = postAction) {
 
+        @formHelper(action = postAction) {
             @dateInput(
                 form = form,
                 legendContent = messages("bereavementReason.headingAndTitle"),
-                legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
+                legendClasses = Some("govuk-fieldset__legend--xl"),
                 hintText = Some(messages("whenDidEventHappen.hint")),
                 legendAsPageHeading = true
             )
-
             @govukButton(Button(content = Text(messages("common.continue"))))
         }
 }
