--- a/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/WhenDidCrimeHappenPage.scala.html
@@ -34,7 +34,7 @@
         @dateInput(
             form = form,
             legendContent = messages("crimeReason.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
+            legendClasses = Some("govuk-fieldset__legend--xl"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
