--- a/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
@@ -16,6 +16,7 @@
 
 @import config.AppConfig
 @import utils.SessionKeys
+@import viewtils.PenaltyTypeHelper
 
 @this(layout: Layout,
         link: components.link,
@@ -25,29 +26,30 @@
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@appealType = @{request.session.get(SessionKeys.appealType)}
+@appealType = @{
+  request.session.get(SessionKeys.appealType)
+}
 
 @pageTitleAndHeading = @{
-    if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
-        "otherReason.whyReturnSubmittedLate.lpp.headingAndTitle"
-    } else "otherReason.whyReturnSubmittedLate.headingAndTitle"
+  if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
+    "otherReason.whyReturnSubmittedLate.lpp.headingAndTitle"
+  } else "otherReason.whyReturnSubmittedLate.headingAndTitle"
 }
 
 @layout(pageTitle = messages(pageTitleAndHeading),
-    isPageFullWidth = false,
-    formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors,
-    optPageMode = Some(pageMode)) {
+  isPageFullWidth = false,
+  formHasErrors = form.errors.nonEmpty,
+  formErrors = form.errors,
+  optPageMode = Some(pageMode)) {
 
-    @formHelper(action = postAction) {
+  @formHelper(action = postAction) {
+    @characterCount(
+      form("why-return-submitted-late-text"),
+      label = messages(pageTitleAndHeading),
+      hint = None,
+      maxLength = Some(5000)
+    )
 
-        @characterCount(
-            form("why-return-submitted-late-text"),
-            label = messages(pageTitleAndHeading),
-            hint = None,
-            maxLength = Some(5000)
-        )
-
-        @govukButton(Button(content = Text(messages("common.continue"))))
-    }
+    @govukButton(Button(content = Text(messages("common.continue"))))
+  }
 }
