--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
@@ -27,6 +27,7 @@
         details: components.details,
         p: components.p,
         bullets: components.bullets,
+        pageHeader: components.pageHeader,
         fileUploadDialog: components.upload.fileUploadDialog)
 
 @(
@@ -64,7 +65,7 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-    <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.headingAndTitle")</h1>
+    @pageHeader(messages("otherReason.uploadEvidence.headingAndTitle"))
     <p class="govuk-body">@messages("otherReason.uploadEvidence.noJs.p1")</p>
     <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
