--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadTakingLongerThanExpectedPage.scala.html
@@ -22,14 +22,15 @@
 
 @this(layout: Layout,
         formHelper: FormWithCSRF,
-        govukButton: GovukButton)
+        govukButton: GovukButton,
+        pageHeader: components.pageHeader)
 
 @(postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("otherReason.uploadEvidence.takingLongerThanExpected.headingAndTitle"),
     isPageFullWidth = false,
     backLinkEnabled = false) {
-    <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.takingLongerThanExpected.headingAndTitle")</h1>
+    @pageHeader(messages("otherReason.uploadEvidence.takingLongerThanExpected.headingAndTitle"))
 
     @formHelper(action = postAction) {
         @govukButton(Button(content = Text(messages("otherReason.uploadEvidence.takingLongerThanExpected.button.checkAgain"))))
