--- a/app/views/layouts/GovUkPageLayout.scala.html
+++ b/app/views/layouts/GovUkPageLayout.scala.html
@@ -39,7 +39,7 @@
         isFullWidth: Boolean = false,
         formHasErrors: Boolean = false,
         errors: Seq[FormError] = Seq.empty
-)(contentBlock: Html)(implicit request: Request[_], messages: Messages)
+)(contentBlock: Html)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @headerDefault = {
 @headerBlock.getOrElse {
