--- a/app/views/components/characterCount.scala.html
+++ b/app/views/components/characterCount.scala.html
@@ -29,7 +29,7 @@
         maxLength: Option[Int] = None,
         hint: Option[Content] = None,
         classes: String = ""
-)(implicit messages: Messages, request: Request[_])
+)(implicit messages: Messages, request: Request[_], appConfig: AppConfig)
 
 @labelContent = {
   <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
