--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@(acceptedFileExtensions: String)(implicit messages: Messages)
+@(acceptedFileExtensions: String, removeFileUrl: String => Call)(implicit messages: Messages)
 <li class="multi-file-upload__item">
     <div class="govuk-form-group">
         <label class="govuk-label" for="file-{fileIndex}">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber}</span></label>
@@ -33,10 +33,10 @@
                     <span class="multi-file-upload__waiting-tag govuk-tag govuk-tag--grey">@messages("otherReason.uploadEvidence.status.pending")</span>
                 </div>
 
-                <button type="button" class="multi-file-upload__remove-item govuk-link">
+                <a type="govuk-link" class="multi-file-upload__remove-item govuk-link" href=@removeFileUrl("{fileRef}").url>
                     @messages("otherReason.uploadEvidence.button.remove")
                     <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.file") <span class="multi-file-upload__number">{fileNumber}</span></span>
-                </button>
+                </a>
                 <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
             </div>
 
