[PRM-1044-A11Y-FIX] - Fixed issues with a11y tests

--- a/app/views/components/upload/uploadList.scala.html
+++ b/app/views/components/upload/uploadList.scala.html
@@ -33,7 +33,8 @@
     @link(
       link = controllers.routes.RemoveFileController.onPageLoad(fileReference, isJsEnabled = false, mode).url,
       messageKey = "otherReason.uploadEvidence.button.remove",
-      id = Some(s"document-row-$fileNumber")
+      id = Some(s"remove-document-$fileNumber"),
+      hiddenContent = Some(messages("otherReason.uploadEvidence.button.remove.hiddenText", fileNumber))
     )
   </dd>
 </div>
