--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -23,14 +23,12 @@
         formHelper: FormWithCSRF,
         pageHeader: components.pageHeader)
 
-@(form: Form[_], reasonableExcuse: String, reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], isObligationAppeal: Boolean = false, pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
+@(reasonableExcuse: String, reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], isObligationAppeal: Boolean = false, pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
 @appealType = @{userRequest.session.get(SessionKeys.appealType)}
 
 @layout(pageTitle = messages("honestyDeclaration.headingAndTitle"),
     isPageFullWidth = false,
-    formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors,
     optPageMode = Some(pageMode)) {
 
     @pageHeader(messages("honestyDeclaration.headingAndTitle"))
@@ -103,9 +101,6 @@
     </ul>
 
     @formHelper(action = controllers.routes.HonestyDeclarationController.onSubmit()) {
-
-        <input type="hidden" id="declaration" name="value" value="true">
-
         @govukButton(Button(content = Text(messages("common.acceptAndContinue"))))
     }
 }
