changed xl headings to l

--- a/app/views/ErrorTemplate.scala.html
+++ b/app/views/ErrorTemplate.scala.html
@@ -20,6 +20,6 @@
 
 @(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @layout(pageTitle = pageTitle, backLinkEnabled = false) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
+    <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
     <p class="govuk-body">@{Text(message).asHtml}</p>
 }
