--- a/app/views/TimeoutPage.scala.html
+++ b/app/views/TimeoutPage.scala.html
@@ -22,7 +22,7 @@
     isPageFullWidth = false,
     showSignOut = false,
     backLinkEnabled = false) {
-    <h1 class="govuk-heading-xl" id="page-heading">@messages("timeout.headingAndTitle")</h1>
+    <h1 class="govuk-heading-l" id="page-heading">@messages("timeout.headingAndTitle")</h1>
     <p class="govuk-body">@messages("timeout.p1")</p>
     <a class="govuk-link govuk-button" href="@controllers.routes.AppealStartController.onPageLoad().url">@messages("timeout.signIn")</a>
 }
