--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -22,7 +22,7 @@
     pageTitle = messages("serviceUnavailable.headingAndTitle"),
     backLinkEnabled = false
 ) {
-    <h1 class="govuk-heading-xl" id="page-heading">@messages("serviceUnavailable.headingAndTitle")</h1>
+    <h1 class="govuk-heading-l" id="page-heading">@messages("serviceUnavailable.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("serviceUnavailable.p1")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p2")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p3")</p>
