--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -22,7 +22,7 @@
     pageTitle = messages("unauthorised.headingAndTitle"),
     backLinkEnabled = false
 ) {
-    <h1 class="govuk-heading-xl">@messages("unauthorised.headingAndTitle")</h1>
+    <h1 class="govuk-heading-l">@messages("unauthorised.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("unauthorised.signUp")</p>
     <p class="govuk-body">@messages("unauthorised.alreadySignedUp")</p>
     <p class="govuk-body"><a class="govuk-link" href="@routes.SignOutController.signOut">@messages("base.signOut")</a></p>
