--- a/app/views/errors/DuplicateAppealPage.scala.html
+++ b/app/views/errors/DuplicateAppealPage.scala.html
@@ -23,7 +23,7 @@
     isPageFullWidth = false,
     backLinkEnabled = false
 ) {
-    <h1 class="govuk-heading-xl" id="page-heading">@messages("duplicateAppeal.headingAndTitle")</h1>
+    <h1 class="govuk-heading-l" id="page-heading">@messages("duplicateAppeal.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("duplicateAppeal.p1")</p>
 
     <p class="govuk-body">
