--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -23,7 +23,7 @@
     isPageFullWidth = false,
     backLinkEnabled = false
 ) {
-    <h1 class="govuk-heading-xl" id="page-heading">@messages("problemWithService.headingAndTitle")</h1>
+    <h1 class="govuk-heading-l" id="page-heading">@messages("problemWithService.headingAndTitle")</h1>
     <p class="govuk-body">@messages("serviceUnavailable.p1")</p>
     <p class="govuk-body">@messages("serviceUnavailable.p2")</p>
     <p class="govuk-body">@messages("serviceUnavailable.p3")</p>
