added govuk-heading-l class to components

--- a/app/views/components/characterCount.scala.html
+++ b/app/views/components/characterCount.scala.html
@@ -41,7 +41,7 @@
     )
   }
   </span>
-  <span id="page-heading">@label</span>
+  <span class="govuk-heading-l" id="page-heading">@label</span>
 }
 @hmrcCharacterCount(CharacterCount(
     label = Label(
