--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -41,7 +41,7 @@
         )
       }
     </span>
-    <span id="page-heading">@legendContent</span>
+    <span class="govuk-heading-l" id="page-heading">@legendContent</span>
   </h1>
 }
 
