--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -38,7 +38,7 @@
         )
       }
     </span>
-    <span id="page-heading">@legendContent</span>
+    <span class="govuk-heading-l" id="page-heading">@legendContent</span>
   </h1>
 }
 
