[PRM-1401] Reduced margins

--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -35,7 +35,7 @@
         @dateInput(
             form = form,
             legendContent = messages(getMessageKeyForPage("health.whenHealthIssueHappened.headingAndTitle")),
-            legendClasses = Some("govuk-fieldset__legend--xl"),
+            legendClasses = Some("govuk-fieldset__legend--xl govuk-!-margin-bottom-0"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
