--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -32,7 +32,7 @@
             @dateInput(
                 form = form,
                 legendContent = messages("bereavementReason.headingAndTitle"),
-                legendClasses = Some("govuk-fieldset__legend--xl"),
+                legendClasses = Some("govuk-fieldset__legend--xl  govuk-!-margin-bottom-0"),
                 hintText = Some(messages("whenDidEventHappen.hint")),
                 legendAsPageHeading = true
             )
