--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import config.AppConfig
+@import models.appeals.CheckYourAnswersRow
 
 @this(layout: Layout,
         bullets: components.bullets,
@@ -23,7 +24,7 @@
         formHelper: FormWithCSRF,
         pageHeader: components.pageHeader)
 
-@(contentToDisplayInSummaryList: Seq[(String, String, String)], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(contentToDisplayInSummaryList: Seq[CheckYourAnswersRow], pageMode: PageMode)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false,
@@ -33,16 +34,16 @@
     <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
     <dl class="govuk-summary-list">
-        @contentToDisplayInSummaryList.map { keyValue =>
+        @contentToDisplayInSummaryList.map { row =>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key govuk-!-width-one-third">
-                        @keyValue._1
+                        @row.key
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        @keyValue._2
+                        @row.value
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="@keyValue._3" aria-label="@messages("checkYourAnswers.change.ariaLabel", keyValue._1)">@messages("checkYourAnswers.change.text")</a>
+                        <a class="govuk-link" href="@row.url" aria-label="@messages("checkYourAnswers.change.ariaLabel", row.key)">@messages("checkYourAnswers.change.text")</a>
                     </dd>
                 </div>
         }
