--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -81,7 +81,7 @@
         (Symbol("data-multi-file-upload-duplicate-url-tpl"), getDuplicatesUrl.url),
         (Symbol("data-multi-file-upload-error-url-tpl"), getErrorServiceUrl.url),
         (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
-        (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload")),
+        (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload", "{fileNumber}")),
         (Symbol("data-multi-file-upload-file-uploading"), messages("upscan.fileUploading", "{fileNumber}", "{fileName}")),
         (Symbol("data-multi-file-upload-file-removed"), messages("upscan.fileRemoved", "{fileNumber}", "{fileName}")),
         (Symbol("data-multi-file-upload-error-prefix"), messages("error.prefix")),
