--- a/app/views/AppealCoverBothPenaltiesPage.scala.html
+++ b/app/views/AppealCoverBothPenaltiesPage.scala.html
@@ -16,14 +16,22 @@
 
 @import config.AppConfig
 
-@this(layout: Layout, pageHeader: components.pageHeader, govukButton: GovukButton)
+@this(layout: Layout,
+      pageHeader: components.pageHeader,
+      link: components.link
+)
 
-@()(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
+@(nextPage: String)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
 @layout(pageTitle = messages("appealCoverBothPenalties.headingAndTitle"),
     isPageFullWidth = false,
     backLinkEnabled = false) {
         @pageHeader(messages("appealCoverBothPenalties.headingAndTitle"))
     <p class="govuk-body">@messages("appealCoverBothPenalties.p1")</p>
-    @govukButton(Button(content = Text(messages("common.continue"))))
+    @link(
+    link = nextPage,
+    messageKey = "common.continue",
+    button = true,
+    classes = "govuk-button"
+    )
 }
