PRM-1577 Removed POST requests, penaltyInformation

--- a/app/views/AppealCoverBothPenaltiesPage.scala.html
+++ b/app/views/AppealCoverBothPenaltiesPage.scala.html
@@ -21,7 +21,7 @@
       link: components.link
 )
 
-@(pageMode: PageMode, nextPage: String, penaltyInformation: String)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
+@(pageMode: PageMode, nextPage: String)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
 @layout(pageTitle = messages("appealCoverBothPenalties.headingAndTitle"),
   isPageFullWidth = false,
